-Changed big bone's rose projectile attack, in phase 1 he will spawn a telegraph at your position and shoot all the roses at that spot, and in phase 2 the telegraph itself and the stream of roses will follow the player like before
-Daffodil's thorn ball after-images are now red instead of green
-Added new custom sounds for spooky spirit's charging attack and death made by Rockwizard5
-Spooky spirit now correctly displays that it is night-time only in it's bestiary entry
-Added new telegraph sprites for orro & boro that actually point in the direction they will come from, as well as making multiple telegraphs spawn in a line instead of just one
-Orro & boro no longer draw behind tiles so you can see them coming if they are inside of tiles
-Orro & boro will now shoot explosive biomass during their final spin attack if only one worm is remaining
-Nerfed boro's charging speed during his short dash attack while orro charges from above/below
-Fixed many spooky mod enemies not being animated in the bestiary
-Feral rats animation speed now depends on their current movement speed instead of just playing at a constant speed
-Buffed the catacomb layer 2 enemies overall stats a bit
-Massively nerfed flourence's knockback resistance as it was way too high
-Changed sunny's bestiary description because it previously said it can use magic to summon more enemies which is a scrapped idea, and it now correctly mentions that it heals other enemies
-****NOT DONE****The toothy enemy no longer does contact damage, instead it now inflicts the player with a damage over time effect that stops as soon as the toothy is killed (or until you die)
-Giant fuzz bats can now sometimes inflict feral bite in expert mode and higher like vanilla bat enemies
-Small fuzzbats can now spawn in the underground spooky forest, and spawn less frequently in the spooky forest surface at night